@@ -1,5 +1,10 @@
 [b]Version 0.5.62[/b] (not released yet):
 
+(2007-10-14)
+ * Added patch by LoRd_MuldeR for prefassociations.cpp and winfileassoc.cpp to
+   make the file associations code compatible with SetFileAssoc.exe. It also
+   adds an "Enqueue in SMPlayer" for the context menu. Not tested yet.
+
 (2007-10-13)
  * Updated the Ukrainian translation.
 
